[gd_scene load_steps=8 format=3 uid="uid://cwiickfe2ytul"]

[ext_resource type="Script" path="res://gamemode_room.gd" id="1_3rwna"]
[ext_resource type="Script" path="res://scripts/lt2_as_godot/node_lt2_anim_deferred.gd" id="2_agq0w"]
[ext_resource type="Script" path="res://anim_root.gd" id="3_esd4w"]
[ext_resource type="Script" path="res://tobj.gd" id="4_pblye"]
[ext_resource type="FontFile" uid="uid://bx8sc11gtqwy" path="res://font/Roboto-Regular.ttf" id="5_47bwv"]

[sub_resource type="FontVariation" id="FontVariation_vgmtm"]
base_font = ExtResource("5_47bwv")
variation_embolden = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_pbh6t"]
line_spacing = 6.0
font = SubResource("FontVariation_vgmtm")
font_size = 31
font_color = Color(0, 0, 0, 1)
outline_color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="gamemode_room" type="Node2D"]
script = ExtResource("1_3rwna")

[node name="Lt2GodotAnimationDeferred" type="Node2D" parent="."]
script = ExtResource("2_agq0w")

[node name="anim_root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_esd4w")

[node name="tobj" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_pblye")

[node name="tobj_window" type="Node2D" parent="tobj"]
script = ExtResource("2_agq0w")
path_animation = "tobj/window.spr"

[node name="icon" type="Node2D" parent="tobj"]
script = ExtResource("2_agq0w")
path_animation = "tobj/icon.spr"

[node name="cursor_wait" type="Node2D" parent="tobj"]
script = ExtResource("2_agq0w")
path_animation = "cursor_wait.spr"

[node name="text" type="Label" parent="tobj"]
layout_mode = 0
offset_right = 275.0
offset_bottom = 129.0
text = "You found a hint coin!"
label_settings = SubResource("LabelSettings_pbh6t")
vertical_alignment = 1
